# tellmesh

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.pl.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  planfile.yaml  pyproject.toml
.github/workflows/: ci.yml
.registry/: README.md  capability_index.json  operation_index.json  uri_index.json
agents/: README.md  __init__.py
agents/custom/: README.md
agents/manifests/: README.md  browser-operator.markpact.md  codex-nl-plan-agent.markpact.md  codex-nl-smoke-agent.markpact.md  desktop-operator.markpact.md  device-robot-operator.markpact.md  generuj-mape-pogody-dwa-tygodnie-do-przodu-w-html-agent.markpact.md  gnome-programmer-agent.markpact.md  hypervisor-dashboard.markpact.md  invoices-agent.markpact.md  remote-deploy-agent.markpact.md  schema-collab-agent.markpact.md  screenshot-analysis-agent.markpact.md  user-agent.markpact.md  weather-map-agent.markpact.md
agents/operators/: README.md  __init__.py  browser_operator.yaml  desktop_operator.yaml  device_robot_operator.yaml  operator_runtime.py
agents/operators/browser_operator/: browser_operator.yaml  main.py  operation_registry.yaml  pyproject.toml
agents/operators/browser_operator/adapters/: browser_playwright.py  browser_playwright_worker.py  browser_router.py
agents/scenarios/: README.md
agents/system/: README.md  __init__.py
config/: extra_operator_registry.yaml  flow_defaults.uri.yaml  llm.uri.yaml  operator_policy.uri.yaml  operator_registry.uri.yaml  runtime_environments.yaml
contracts/: resources.yaml  views.yaml
contracts/agents/: generuj_mape_pogody_dwa_tygodnie_do_przodu_w_html_agent.yaml  weather_map_agent.yaml
contracts/proto/: generuj_mape_pogody_dwa_tygodnie_do_przodu_w_html.proto  invoices.proto
deployments/: README.md  agent_deployments.yaml
docs/: AGENTS_AND_MONITORING.md  ANTI_TELLM.md  ARCHITECTURE_V0_5.md  AUTO_EVOLUTION_PIPELINE.md  CAPABILITY_VERIFICATION.md  CHAT_AND_WORKFLOWS.md  CONTRACT_REGISTRY_SCHEMA.md  DASHBOARD.md  DEPLOYMENT.md  DESKTOP_AUTONOMY.md  DOMAIN_SEPARATION.md  DONE.md  EVOLUTION.md  EXTERNAL_PACKAGES.md  HYPERVISOR_V0_2.md  HYPERVISOR_V0_3.md  HYPERVISOR_V0_4.md  MARKPACT_WITH_TOURI.md  META_AGENT.md  NL2A_DOMAIN_PACKS.md  NL2URI.md  OPERATOR_RUNTIME.md  OPERATOR_SECURITY.md  PACKAGE_BOUNDARIES.md  PACKAGE_BOUNDARIES.yaml  PHYSICAL_AUTONOMY.md  README.md  README.pl.md  ROADMAP.md  SERVICE_RESULT.md  STANDARDS.md  SYSTEM_MAP.md  TOURI.md  TUTORIAL_AGENT_SCHEMA_URI.pl.md  TUTORIAL_THREE_AGENTS.md  URI2FLOW.md  URI2LLM.md  URI2OPS.md  URI2RUN_ARCHITECTURE.md  URI3.md  (+3 more)
domains/generuj_mape_pogody_dwa_tygodnie_do_przodu_w_html/: commands.yaml  domain.yaml  registry.fragment.yaml  renderers.yaml  resources.yaml  uri_tree.yaml  views.yaml
domains/weather_map/: uri_tree.yaml
evolution/: README.md
examples/: README.md  README.pl.md  office_chains.yaml
examples/01_quickstart_local/: ABOUT.md  README.md  run.sh
examples/02_uri3_scan_http/: ABOUT.md  README.md
examples/03_ssh_remote_agent/: ABOUT.md  README.md
examples/04_nl2a_weather_map/: ABOUT.md  run.sh
examples/05_meta_repair/: ABOUT.md  README.md
examples/06_orders_agent/: ABOUT.md  README.md
examples/07_invoices_agent/: ABOUT.md  README.md
examples/08_evolution/: ABOUT.md  README.md
examples/09_run_agent_hypervisor/: ABOUT.md  run.sh
examples/10_browser_operator/: run.sh
examples/11_playwright_browser/: ABOUT.md  README.md  run.sh  task.health.yaml
examples/12_android_operator/: ABOUT.md  README.md  run.sh  task.android.yaml
examples/13_nl2uri_multi_uri_graph/: ABOUT.md  README.md  prompt.txt  run.sh  task_plan.yaml  workflow_graph.yaml
examples/13_pcwin_operator/: ABOUT.md  README.md  run.sh  task.pcwin.yaml
examples/14_uri2ops_serve/: ABOUT.md  README.md  run.sh
examples/14_workflow_executor_mock/: run.sh
examples/15_playwright_browser/: ABOUT.md  README.md
examples/16_llm_graph_planner/: ABOUT.md  README.md  run.sh
examples/16_www_landing_monitor/: ABOUT.md
examples/17_flow_vs_graph/: ABOUT.md  run.sh
examples/18_llm_flow_planner/: ABOUT.md  (+1 more)
generator/: verify.py
hypervisor/: __init__.py  cli.py  config.py
market/: ASSESSMENT.md  BATTLECARD.md  COMPETITIVE_LANDSCAPE.md  DEMO_SCRIPT.md  GTM_POLAND.md  LANDING_COPY.md  MARKET_HYPOTHESIS.md  OFFERS.md  PAIN_LANGUAGE.md  POSITIONING.md  PRODUCT_READINESS.md  README.md  STANDARDS.md  STRATEGY.md
meta_agent/: orchestrator.py
output/: contract_registry.resolved.json
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  project.yaml  prompt.txt
scripts/: README.md  architecture_responsibility_audit.py  paths.sh  test-all-examples.sh
tests/: __init__.py  conftest.py  test_dependencies.py  test_evolution_proposal.py  test_hypervisor.py  test_nl2a_v04.py  test_operation_registry.py  test_operator_task.py  test_uri2llm_v04.py  test_uri2ops_android.py  test_uri2ops_browser.py  test_uri2ops_pcwin.py  test_uri2ops_serve.py  test_uri2ops_v01.py
uri2ops/: README.md
www/: Dockerfile  README.md  README.pl.md  app.js  chat-uri.js  chat.html  demo.html  docker-compose.yml  examples-gallery.js  index.html  landing-i18n.js  landing.css  landing.js  office-cards-i18n.js  przyklady.html  styles.css
(+216 files in other folders)
