[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tellmesh"
version = "0.5.30"
description = "TellMesh — URI-first agent monorepo umbrella (uri3, nl2uri, hypervisor, agent factory)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Tom Sapletta", email = "tom@sapletta.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "jinja2>=3.1",
    "jsonschema>=4.23",
    "markdown>=3.5",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "typer>=0.26.7",
    "uri3",
    "nl2uri",
    "uri2flow",
    "uri2ops",
    "touri",
    "uri2voice",
    "uri2pact",
    "uri2run",
    "uri2verify",
    "urigen",
    "urish",
    "hypervisor",
    "resource-agent-hypervisor",
    "resource-agent-factory",
    "hypervisor-dashboard-agent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=1.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
    "rich>=13.0.0",
    "uvicorn>=0.27",
]
browser = [
    "playwright>=1.40",
]
windows = [
    "pywinauto>=0.6",
]
server = [
    "uvicorn>=0.27",
]

[project.scripts]
hypervisor = "hypervisor.cli:main"
uri3 = "uri3.cli:main"
uri2ops = "uri2ops.cli:main"
uri2flow = "uri2flow.cli:main"
uri2run = "uri2run.cli:main"
uri = "urish.cli:main"
urish = "urish.cli:main"
taskinity = "urish.cli:main"
touri = "touri.cli:main"
uri2verify = "uri2verify.cli:main"
urigen = "urigen.cli:main"
nl2uri = "nl2uri.cli:main"
nl2a = "nl2a.cli:main"

[project.urls]
Homepage = "https://github.com/tellmesh/tellmesh"
Repository = "https://github.com/tellmesh/tellmesh"
Issues = "https://github.com/tellmesh/tellmesh/issues"
Documentation = "https://github.com/tellmesh/tellmesh#readme"

[tool.uv.workspace]
members = []
exclude = ["packages/project"]

[tool.uv.sources]
hypervisor = { path = "../hypervisor", editable = true }
uri3 = { path = "../uri3", editable = true }
nl2uri = { path = "../nl2uri", editable = true }
uri2flow = { path = "../uri2flow", editable = true }
uri2ops = { path = "../uri2ops", editable = true }
touri = { path = "../touri", editable = true }
uri2voice = { path = "../uri2voice", editable = true }
uri2pact = { path = "../uri2pact", editable = true }
uri2run = { path = "../uri2run", editable = true }
urish = { path = "../urish", editable = true }
uri2verify = { path = "../uri2verify", editable = true }
urigen = { path = "../urigen", editable = true }
resource-agent-hypervisor = { path = "../resource-agent-hypervisor", editable = true }
resource-agent-factory = { path = "../resource-agent-factory", editable = true }
hypervisor-dashboard-agent = { path = "../hypervisor-dashboard", editable = true }

[tool.setuptools.packages.find]
where = [
    "examples/21_touri_voice",
]
include = [
    "touri_examples_voice*",
]

[tool.setuptools.package-data]
hypervisor = ["py.typed", "data/*.yaml"]
generator = ["templates/*"]
uri2ops = [
    "operation_registry/*.yaml",
    "schemas/*.json",
]
uri2flow = [
    "schemas/*.json",
]
touri = [
    "schemas/*.json",
]
urigen = [
    "schemas/*.json",
    "templates/*.j2",
]
hypervisor_dashboard_agent = ["templates/*", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
markers = [
    "examples: integration tests for examples/* demos",
    "docker: requires docker daemon",
    "slow: long-running tutorial or full-stack example",
    "real: real-mode command (hardware, browser, live agent)",
    "www: requires Taskinity WWW on localhost:8788",
    "monitor: landing/uptime monitor automation",
]
pythonpath = [
    ".",
    "../hypervisor",
    "../uri3",
    "../nl2uri",
    "../uri2flow",
    "../uri2ops",
    "../touri",
    "../uri2voice",
    "../uri2pact",
    "../uri2run",
    "../uri2verify",
    "../urigen",
    "../urish",
    "../resource-agent-hypervisor",
    "../resource-agent-factory",
    "../hypervisor-dashboard",
    "examples/21_touri_voice",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true

[tool.pfix]
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
